Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-504

right outer join and full outer join do not return row with Null value for the second table

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • Impala 1.0.1
    • Impala 1.1.1
    • None

    Description

      When you run select * from a right outer join (or full outer join) b on a.column1=b.column1

      row from b will not be returned if b.column1 is null

      Attachments

        Activity

          People

            alex.behm Alexander Behm
            jamedeng_impala_b044 James Deng
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: