be/src/exec/hash-join-node.cc
@@ -112,8 +112,10 @@ Status HashJoinNode::Prepare(RuntimeState* state) {
   }
 
   // TODO: default buckets
+  bool stores_nulls =
+      join_op_ == TJoinOp::RIGHT_OUTER_JOIN || join_op_ == TJoinOp::FULL_OUTER_JOIN;
   hash_tbl_.reset(new HashTable(build_exprs_, probe_exprs_, build_tuple_size_, 
-      false, id(), *state->mem_limits()));
+      stores_nulls, false, id(), *state->mem_limits()));
 
   probe_batch_.reset(
       new RowBatch(row_descriptor_, state->batch_size(), *state->mem_limits()));
